--- a/development/index.html
+++ b/development/index.html
@@ -1,29 +1,23 @@
 <!doctype html>
 <!--
- _   ___________  ___
-| | / /| ___ \  \/  |
-| |/ / | |_/ /      |
-|    \ |  __/| |\/| |
-| |\  \| |   | |  | |
-\_| \_/\_|   \_|  |_/
+    ____  _             __         
+   / __ \(_)___  ____  / /__  _____
+  / /_/ / / __ \/ __ \/ / _ \/ ___/
+ / _, _/ / /_/ / /_/ / /  __(__  ) 
+/_/ |_/_/ .___/ .___/_/\___/____/  
+       /_/   /_/                   
                      
 -->
 <html lang="en" ng-app="app">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-	<title>KPM</title>
-	<link rel="icon" type="image/png" href="styles/img/favicon.ico">
-
-	<!-- CSS -->
-	<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="/styles/ui-font-solid.css">
-	<link rel="stylesheet" href="/styles/socicon.css">
-	<link rel="stylesheet" href="/styles/logo-animation.css">
+	<title>Ripples</title>
+	<link rel="icon" type="image/png" href="assets/images/favicon.ico">
 </head>
-<body ng-controller="mainController" class="kill-animations" resize>
-	<ng-include src="'views/mobile.html'" ng-show="browserType == 'mobile'" ng-controller="mobileController" ></ng-include>
-	<ng-include src="'views/desktop.html'" ng-show="browserType == 'desktop'"></ng-include>
+<body class="kill-animations" resize>
+	<ng-include src="'/assets/views/mobile.html'" ng-show="browserType == 'mobile'"></ng-include>
+	<ng-include src="'/assets/views/desktop.html'" ng-show="browserType == 'desktop'"></ng-include>
 	<!-- Scripts -->
 	<script src="/scripts/vendor.js"></script>
 	<script src="/scripts/app.js"></script>
