--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,14 @@
  / _, _/ / /_/ / /_/ / /  __(__  ) 
 /_/ |_/_/ .___/ .___/_/\___/____/  
        /_/   /_/                   
-                     
+
+v.1
+
+kpm-branch
+
+8/2/14
+
+Kevin Paul Martin
 -->
 <html lang="en" data-ng-app="app">
 <head>
@@ -14,22 +21,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
 	<title>Ripples</title>
 	<link rel="icon" type="image/png" href="assets/images/favicon.ico">
+	<link href="http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900|Montserrat:400,700" rel="stylesheet" type="text/css">
 </head>
-<body class="kill-animations" resize>
+<body resize>
 	<data-ng-include src="'/assets/views/mobile.html'" data-ng-show="browserType == 'mobile'"></data-ng-include>
-	<data-ng-include src="'/assets/views/desktop.html'" data-ng-show="browserType == 'desktop'"></data-ng-include>
+	<data-ng-include src="'/assets/views/desktop.html'" data-ng-show="browserType == 'desktop'" data-ng-controller="mainController"></data-ng-include>
 	<!-- Scripts -->
 	<script src="/scripts/vendor.js"></script>
 	<script src="/scripts/app.js"></script>
-	<script>
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-	
-	  ga('create', 'UA-45246565-1', 'kevinpaulmartin.com');
-	  ga('send', 'pageview');
-	
-	</script>
 </body>
 </html>
